--- a/index.html
+++ b/index.html
@@ -83,7 +83,8 @@
 
 
 	<script>
-		const url = 'http://localhost:3000/api/auth'
+		// const url = 'http://localhost:3000/api/auth'
+		const url = 'https://jovick-coder-task-api.herokuapp.com/api/auth'
 		const loginForm = document.querySelector('#login-form')
 		const registerForm = document.querySelector('#register-form')
 		const message = document.querySelectorAll('.message')
