--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 			const response = await fetch(`${url}/login`, {
 				method: 'POST', // *GET, POST, PUT, DELETE, etc.
 				headers: {
-					'Content-Type': 'application/json'
+					'Content-Type': 'application/json',
 				},
 				body: JSON.stringify(data) // body data type must match "Content-Type" header
 			});
